# USAP-5G

./: .env  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  MakefileVars.mk  README.md  Vagrantfile  algo.csv  go.mod  go.sum  go.work.sum  main.go  ric.env
asn1coder/: CMakeLists.txt
asn1coder/asn1/: build_asn1_files.md
asn1coder/src/: asn1coder.c  asn1coder.h
asn1coder/test/: CMakeLists.txt  testAsn1Coder.c
cmd/: main.go
e2ap/: CMakeLists.txt  wrapper.c  wrapper.h
e2ap/asn1/: elementaryProcedureDefinitions.asn  informationElementDefinitions.asn
e2ap/lib/: AMFName.c  AMFName.h  BIT_STRING_jer.c  Cause.c  Cause.h  CauseE2node.c  CauseE2node.h  CauseMisc.c  CauseMisc.h  CauseProtocol.c  CauseProtocol.h  CauseRICrequest.c  CauseRICrequest.h  CauseRICservice.c  CauseRICservice.h  CauseTransport.c  CauseTransport.h  Criticality.c  Criticality.h  CriticalityDiagnostics-IE-Item.c  CriticalityDiagnostics-IE-Item.h  CriticalityDiagnostics-IE-List.c  CriticalityDiagnostics-IE-List.h  CriticalityDiagnostics.c  CriticalityDiagnostics.h  E2AP-PDU.c  E2AP-PDU.h  E2RemovalFailure.c  E2RemovalFailure.h  E2RemovalRequest.c  E2RemovalRequest.h  E2RemovalResponse.c  E2RemovalResponse.h  E2connectionSetupFailed-Item.c  E2connectionSetupFailed-Item.h  E2connectionSetupFailed-List.c  E2connectionSetupFailed-List.h  E2connectionUpdate-Item.c  E2connectionUpdate-Item.h  E2connectionUpdate-List.c  (+369 more)
e2sm/: CMakeLists.txt  build_asn_file.md  test  test.c  test.go  test.py  wrapper.c  wrapper.h
e2sm/include/: defer.h
e2sm/kpm_decoder/: CMakeLists.txt
e2sm/kpm_decoder/lib/: AMF-UE-NGAP-ID.c  AMF-UE-NGAP-ID.h  AMFPointer.c  AMFPointer.h  AMFRegionID.c  AMFRegionID.h  AMFSetID.c  AMFSetID.h  Beam-ID.c  Beam-ID.h  BinIndex.c  BinIndex.h  BinRangeDefinition.c  BinRangeItem.c  BinRangeItem.h  BinRangeList.c  BinRangeValue.c  CGI.c  CGI.h  Cell-RNTI.c  CoreCPID.c  CoreCPID.h  DistMeasurementBinRangeItem.c  DistMeasurementBinRangeList.c  DistMeasurementBinRangeList.h  E-UTRA-ARFCN.c  E-UTRA-ARFCN.h  E-UTRA-PCI.c  E-UTRA-PCI.h  E-UTRA-TAC.c  E-UTRA-TAC.h  E2SM-KPM-ActionDefinition-Format1.c  E2SM-KPM-ActionDefinition-Format1.h  E2SM-KPM-ActionDefinition-Format2.c  E2SM-KPM-ActionDefinition-Format3.c  E2SM-KPM-ActionDefinition-Format3.h  E2SM-KPM-ActionDefinition-Format4.c  E2SM-KPM-ActionDefinition-Format4.h  E2SM-KPM-ActionDefinition-Format5.c  E2SM-KPM-ActionDefinition-Format5.h  (+234 more)
e2sm/kpm_decoder/src/: wrapper.c  wrapper.h
e2sm/kpm_decoder/test/: test.c
e2sm/kpm_encoder/: CMakeLists.txt
e2sm/kpm_encoder/lib/: AMF-UE-NGAP-ID.c  Beam-ID.h  BinRangeItem.h  Cell-RNTI.c  DistMeasurementBinRangeItem.c  DistMeasurementBinRangeItem.h  DistMeasurementBinRangeList.h  E-UTRA-ARFCN.h  E2SM-KPM-ActionDefinition-Format1.h  E2SM-KPM-ActionDefinition-Format2.c  E2SM-KPM-ActionDefinition-Format2.h  E2SM-KPM-ActionDefinition-Format3.c  E2SM-KPM-EventTriggerDefinition.h  E2SM-KPM-IndicationMessage-Format1.c  E2SM-KPM-IndicationMessage-Format2.h  E2SM-KPM-IndicationMessage-Format3.c  E2SM-KPM-IndicationMessage-Format3.h  EN-GNB-ID.c  ENB-ID.h  ENB-UE-X2AP-ID-Extension.h  EUTRA-CGI.c  EUTRA-CGI.h  EUTRACellIdentity.c  EXTERNAL.c  FiveGS-TAC.c  FiveQI.c  FiveQI.h  FreqBandNrItem.c  FreqBandNrItem.h  GNB-DU-ID.c  GNB-ID.h  GUAMI.h  GUMMEI.h  GlobalGNB-ID.c  GlobalGNB-ID.h  GlobalNgENB-ID.h  GranularityPeriod.h  InterfaceID-E1.c  InterfaceID-E1.h  InterfaceID-NG.c  (+67 more)
e2sm/kpm_encoder/src/: wrapper.c  wrapper.h
e2sm/kpm_encoder/test/: test  test.c
e2sm/kpm_v4.00_compiled/: AMF-UE-NGAP-ID.c  AMF-UE-NGAP-ID.h  AMFPointer.c  AMFPointer.h  AMFRegionID.c  AMFRegionID.h  AMFSetID.c  AMFSetID.h  Beam-ID.c  Beam-ID.h  BinIndex.c  BinIndex.h  BinRangeDefinition.c  BinRangeDefinition.h  BinRangeItem.c  BinRangeItem.h  BinRangeList.c  BinRangeList.h  BinRangeValue.c  BinRangeValue.h  CGI.c  CGI.h  Cell-RNTI.c  Cell-RNTI.h  CoreCPID.c  CoreCPID.h  DistMeasurementBinRangeItem.c  DistMeasurementBinRangeItem.h  DistMeasurementBinRangeList.c  DistMeasurementBinRangeList.h  E-UTRA-ARFCN.c  E-UTRA-ARFCN.h  E-UTRA-PCI.c  E-UTRA-PCI.h  E-UTRA-TAC.c  E-UTRA-TAC.h  E2SM-KPM-ActionDefinition-Format1.c  E2SM-KPM-ActionDefinition-Format1.h  E2SM-KPM-ActionDefinition-Format2.c  E2SM-KPM-ActionDefinition-Format2.h  (+294 more)
e2sm/kpm_wrapper/: CMakeLists.txt
e2sm/test/: AMF-UE-NGAP-ID.c  AMF-UE-NGAP-ID.h  AMFPointer.c  AMFPointer.h  AMFRegionID.c  AMFRegionID.h  AMFSetID.c  AMFSetID.h  Beam-ID.c  Beam-ID.h  BinIndex.c  BinIndex.h  BinRangeDefinition.c  BinRangeDefinition.h  BinRangeItem.c  BinRangeItem.h  BinRangeList.c  BinRangeList.h  BinRangeValue.c  BinRangeValue.h  CGI.c  CGI.h  Cell-RNTI.c  Cell-RNTI.h  CoreCPID.c  CoreCPID.h  DistMeasurementBinRangeItem.c  DistMeasurementBinRangeItem.h  DistMeasurementBinRangeList.c  DistMeasurementBinRangeList.h  E-UTRA-ARFCN.c  E-UTRA-ARFCN.h  E-UTRA-PCI.c  E-UTRA-PCI.h  E-UTRA-TAC.c  E-UTRA-TAC.h  E2SM-KPM-ActionDefinition-Format1.c  E2SM-KPM-ActionDefinition-Format1.h  E2SM-KPM-ActionDefinition-Format2.c  E2SM-KPM-ActionDefinition-Format2.h  (+290 more)
encdec-api/: pyproject.toml
encdec-api/app/: app.py
oranASN1Coder/: pyproject.toml
oranASN1Coder/app/: app.py
oranASN1Coder/testgo/: test.go
usap-classifier/: pyproject.toml
usap-classifier/app/: app.py
usap-e2sm/: README.md  pyproject.toml
usap-e2sm/usap_e2sm/: main.py
usap-smc/: README.md  pyproject.toml
usap-smc/data/: gen_latency_graph.py  gen_latency_graph_emu.py  latencies_emu.csv
usap-smc/tests/: logger.py
usap-smc/usap_smc/: latencies.csv  main.py
usap-xapp/: CMakeLists.txt  README.md  go.mod
usap-xapp/config/: xapp.conf
usap-xapp/configs/: xapp.conf
usap-xapp/includes/: defer.hpp
usap-xapp/protobuf/: gen_python.md  xapp.proto
usap-xapp/src/: xapp_usap.cpp
xapp/: CMakeLists.txt  README.md  pyproject.toml  pyproject.toml.bkp
xapp/app/: main.py
xapp/config/: config-file.json
xapp/libs/: CMakeLists.txt  README.md
xapp/pb/: xapp.proto
xapp/src/: defer.hpp  grpc_server.cpp  grpc_server.hpp  usap.c  usap.cpp  usap.h  usap.hpp  utils.cpp  utils.hpp  xapp_usap.cpp  xapp_usap.hpp
xapp/usap/: main.py
(+2603 files in other folders)
