[tool.poetry]
name = "encdec-api"
version = "1.0.0"
description = ""
authors = ["Murilo Silva <murilosilva@itec.ufpa.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asn1tools = "^0.167.0"
flask = "^3.0.3"

[tool.poetry.scripts]
start = "app:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
