[tool.poetry]
name = "encdec-api"
version = "1.0.0"
description = ""
authors = ["Murilo Silva <murilosilva@itec.ufpa.br>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
asn1tools = "^0.167.0"
flask = "^3.0.3"
pycrate = "^0.7.7"

[tool.poetry.scripts]
start = "app.app:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
