[project]
name = "usap_smc"
version = "0.0.1"
description = "USAP Slice Manager and Classifier"
authors = [
    {name = "Murilo Silva",email = "murilosilva@itec.ufpa.br"}
]
maintainers = [
    { name = "Murilo Silva", email = "murilosilva@itec.ufpa.br" },
    {name = "Victor Dias",email = "victor.leiter@ig.ufpa.br"},
    {name = "Matheus Costa",email = "matheus.gomes@itec.ufpa.br"},
    {name = "João Batista",email = "joao.bastos.junior@itec.ufpa.br"},
    {name = "Glauber Castro",email = "glaubersantiagodecastro@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["flask (>=3.1.0,<4.0.0)", "jsonify (>=0.5,<0.6)", "pymongo (>=4.10.1,<5.0.0)", "bson (>=0.5.10,<0.6.0)", "flask-socketio (>=5.5.1,<6.0.0)", "grpcio (>=1.69.0,<2.0.0)", "grpcio-tools (>=1.69.0,<2.0.0)", "structlog (>=24.4.0,<25.0.0)"]
license = { text = "Apache-2.0" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
requires-poetry = ">=2.0"
classifiers = [
    "Topic :: Software Development :: Open RAN :: Network Slicing",
    "Topic :: Software Development :: Open RAN :: Monitoring",
    "Topic :: Software Development :: Open RAN :: Machine Learning",
    "Topic :: Software Development :: Open RAN :: Artificial Intelligence (AI)"
]

[project.scripts]
app = "usap_smc.main:run"
core5g = "usap_smc.core5g.core5g:run"