[project]
name = "usap-xapp"
version = "0.0.1"
description = "USAP xApp source code"
authors = [
    {name = "Murilo Silva",email = "murilosilva@itec.ufpa.br"}
]
maintainers = [
    { name = "Murilo Silva", email = "murilosilva@itec.ufpa.br" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ricxappframe (>=3.2.2,<4.0.0)",
    "asn1tools (>=0.167.0,<0.168.0)",
    "hiredis (>=3.1.0,<4.0.0)",
    "six (>=1.17.0,<2.0.0)"
]
license = { text = "Apache-2.0" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
requires-poetry = ">=2.0"
classifiers = [
    "Topic :: Software Development :: Open RAN :: xApp",
    "Topic :: Software Development :: Open RAN :: Network Slicing",
    "Topic :: Software Development :: Open RAN :: Monitoring",
    "Topic :: Software Development :: Open RAN :: Artificial Intelligence (AI)",
]
include = [{ path = "app", format = "sdist" }]

[project.scripts]
usap = "app.main:run"