[project]
name = "usap"
version = "0.0.1"
description = "USAP xApp source code"
authors = [
    {name = "Murilo Silva",email = "murilosilva@itec.ufpa.br"}
]
maintainers = [
    { name = "Murilo Silva", email = "murilosilva@itec.ufpa.br" },
]
readme = "README.md"
requires-python = ">=3.9, <3.12"
dependencies = [
    "asn1tools (>=0.167.0,<0.168.0)",
    "six (>=1.17.0,<2.0.0)",
    "mdclogpy (>=1.1.4,<2.0.0)",
    "ricxappframe @ file:///opt/ric-plt-xapp-frame-py",
]
license = { text = "Apache-2.0" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
requires-poetry = ">=2.0"
classifiers = [
    "Topic :: Software Development :: Open RAN :: xApp",
    "Topic :: Software Development :: Open RAN :: Network Slicing",
    "Topic :: Software Development :: Open RAN :: Monitoring",
    "Topic :: Software Development :: Open RAN :: Artificial Intelligence (AI)",
]

[tool.poetry.dependencies]
ricxappframe = {develop = true}
[project.scripts]
usap = "usap.main:run"